# bh-traffic-data-mining

./: .gitignore  Fase2.ipynb  README.md  pyproject.toml
MAFAULDA/: README  motor_cluster.ipynb
bhTrafficDataMining/dataProcessing/: dataLoader.py  main.py
bhTrafficDataMining/dataProcessing/data/: Dicionário de dados - V1 Contagem volumétrica de radares.csv
bhTrafficDataMining/humanAttempt/: association_rules_conf75.csv  phase3.ipynb  resultados.csv
bhTrafficDataMining/humanAttempt/dataProcessing/: dataLoader.py  main.py
bhTrafficDataMining/humanAttempt/patternMining/: main.py  preprocessor.py
bhTrafficDataMining/humanAttempt/spmf/: FASE3.ipynb  arquivo.txt  arquivoseq.txt  freq.csv  frequentes.csv  regras.csv  rule_seq.txt
bhTrafficDataMining/llmAttempt/: business_understanding.ipynb  minePatterns.py  minePatterns_history.ipynb  phase2.ipynb  readData.py  readData_history.ipynb
bhTrafficDataMining/llmAttempt/results/: association_rules.csv  frequent_itemsets.csv
